src/core/Claroline/CoreBundle/Tests/Stub/plugin/extension/Valid/WithMigrations/ValidWithMigrations.php
<?php

namespace Valid\WithMigrations;

use Claroline\CoreBundle\AbstractType\ClarolineExtension;

class ValidWithMigrations extends ClarolineExtension
{
    
}